# torch-gds

./: .gitignore  CMakeLists.txt  compile_commands.json  embedding.cpp
pcie/: CMakeLists.txt  pcie_monitor.cpp  pcie_monitor.h
pcm/: CMakeLists.txt  bw.cpp  bw.h  core.cpp  cpucounters.cpp  cpucounters.h  dashboard.cpp  dashboard.h  debug.cpp  debug.h  mmio.cpp  mmio.h  msr.cpp  msr.h  mutex.h  pci.cpp  pci.h  resctrl.cpp  resctrl.h  threadpool.cpp  threadpool.h  topology.cpp  topology.h  topologyentry.h  types.h  uncore_pmu_discovery.cpp  uncore_pmu_discovery.h  utils.cpp  utils.h  width_extender.h
scripts/: test_myops.py
torch_ext/: CMakeLists.txt  allocator.h  copy.cpp  dha_table.h  ops.cpp  table.h
